# machine-learning-zoomcamp-2025

01-intro/: homework.ipynb
02-Regression/: Car Fuel Efficiency Prediction.ipynb
04-Evaluation/: evaluation.ipynb
05-Deployment/: Dockerfile  main.py  predict.py  pyproject.toml  readme.md  score_client.py
06-Trees/: Trees.ipynb
Auto_Insurance_Claim_Prediction/: Dockerfile  README.md  Untitled.ipynb  notebook.ipynb  predict.py  pyproject.toml  requirements.txt.txt  train.ipynb  train.py
Classification/: bank_marketting_conversion.ipynb
