[project]
name = "auto-insurance-claim-prediction"
version = "0.1.0"
description = "Auto Insurance Claim Prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.2",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "requests>=2.32.5",
]
